newInstance now called correctly